<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/rgWeight"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522">

        <RadioButton
            android:id="@+id/rbStandard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rbStandard"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="330dp" />

        <RadioButton
            android:id="@+id/rbMetric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbMetric"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="378dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="318dp"
        android:layout_height="52dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/tvTitle"
        android:textColor="#4CAF50"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152" />

    <EditText
        android:id="@+id/tvHeight"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal"
        android:hint="@string/hintHeight"
        android:inputType="number"
        android:textColorHint="#78909c"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <EditText
        android:id="@+id/tvWeight"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal"
        android:hint="@string/hintWeight"
        android:inputType="number"
        android:textColorHint="#78909c"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <Button
        android:id="@+id/btConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#4CAF50"
        android:gravity="center_horizontal"
        android:text="@string/btConvert"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:textColor="#181818"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

</androidx.constraintlayout.widget.ConstraintLayout>